--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 spring.application.name=back
 spring.datasource.url: jdbc:h2:mem:testdb
+spring.config.import=optional:classpath:messages.properties
