--- a/front/.vscode/launch.json
+++ b/front/.vscode/launch.json
@@ -17,7 +17,7 @@
       "url": "http://localhost:9876/debug.html"
     },
     {
-      "type": "debug",
+      "type": "chrome",
       "request": "launch",
       "name": "Lanzar Chrome contra localhost",
       "url": "http://localhost:4200",
