--- a/front/angular.json
+++ b/front/angular.json
@@ -25,9 +25,10 @@
               "src/assets"
             ],
             "styles": [
-              "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
+              "node_modules/primeng/resources/themes/lara-dark-cyan/theme.css",
               "node_modules/primeng/resources/primeng.min.css",
               "node_modules/bootstrap/dist/css/bootstrap-grid.min.css",
+              "src/normalize.css",
               "src/styles.css"
             ],
             "scripts": []
