--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=back
 spring.datasource.url: jdbc:h2:mem:testdb
 spring.config.import=optional:classpath:messages.properties
+jwt.secret=mqj=}sghrS^}&hb.<'e['Tml[I_s8o
