--- a/front/angular.json
+++ b/front/angular.json
@@ -28,6 +28,7 @@
               "node_modules/primeng/resources/themes/lara-dark-cyan/theme.css",
               "node_modules/primeng/resources/primeng.min.css",
               "node_modules/bootstrap/dist/css/bootstrap-grid.min.css",
+              "node_modules/bootstrap/dist/css/bootstrap-utilities.min.css",
               "src/normalize.css",
               "src/styles.css"
             ],
